my study tears process